<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="clip_vertical"
    android:orientation="vertical" >

   

    <Button
        android:id="@+id/add"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onAddClick"
        android:text="@string/add_user" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add"
        android:layout_centerHorizontal="true"
        android:onClick="onLoginClick"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="28dp"
        android:text="@string/user_pwd" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/add"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword" />

    
    <EditText
        android:id="@+id/editText_username"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/editText5"
        android:inputType = "text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText_username"
        android:layout_alignBottom="@+id/editText_username"
        android:layout_alignParentLeft="true"
        android:text="@string/user_name" />

</RelativeLayout>