<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/addItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item" 
            android:onClick="onAddItemClick"/>
                <CheckBox
                    android:id="@+id/checkBoxHide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_checked" 
                    />
        
        
    </LinearLayout>
    
    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sync"
        android:layout_below="@+id/group1"
        android:clickable="true"
        android:longClickable="true" >

    </ListView>
   <Button
        android:id="@+id/sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onSaveClick"
        android:text="@string/sync" />
    

</RelativeLayout>